<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="2OO-0R-yCG">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tjN-jn-DkO">
                                <rect key="frame" x="0.0" y="615" width="375" height="44"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                <items>
                                    <barButtonItem title="Create" id="t4K-kK-0zM">
                                        <connections>
                                            <action selector="createObject:" destination="BYZ-38-t0r" id="YfZ-Rc-qoc"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem title="Read" id="x1P-uI-UNE">
                                        <connections>
                                            <action selector="readObject:" destination="BYZ-38-t0r" id="RVc-Er-cf8"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem title="Update" id="HAD-KH-JrC">
                                        <connections>
                                            <action selector="updateObject:" destination="BYZ-38-t0r" id="5Wp-al-lfI"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem title="Delete" id="4bB-p2-73h">
                                        <connections>
                                            <action selector="deleteObject:" destination="BYZ-38-t0r" id="Pi8-kr-r9w"/>
                                        </connections>
                                    </barButtonItem>
                                </items>
                            </toolbar>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </view>
                    <navigationItem key="navigationItem" id="t67-Fh-uJt"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1056.8" y="122.78860569715144"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="tbB-hJ-iDf">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2OO-0R-yCG" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="4Ok-UW-dDo">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="GWC-nm-Nxh"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="WNP-Qt-2bf" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="117.59999999999999" y="122.78860569715144"/>
        </scene>
    </scenes>
</document>
